--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = list((review))\n",
+    "total_reviews = list(map(review))\n",
     "total_reviews # 3420"
    ]
   },
