Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,21 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'yelp_restaurants' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-3ca066b233b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                            \u001b[0mis_closed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_closed'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                            \u001b[0mreview_count\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'review_count'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                                           ), yelp_restaurants))\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'yelp_restaurants' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "restaurants = list(map(lambda restaurant: dict(name=restaurant['name'], \n",
     "                                           price=restaurant['price'], \n",
@@ -182,19 +170,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'restaurants' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-fdc66b1de1bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrestaurants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'restaurants' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': '$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Cocina Azul',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 647},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
