Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,53 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 610},\n",
-       " {'name': 'Salt And Board',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 11},\n",
-       " {'name': 'Frontier Restaurant',\n",
-       "  'price': '$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 1373},\n",
-       " {'name': 'Nexus Brewery',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 680},\n",
-       " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 54},\n",
-       " {'name': 'Cocina Azul',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 647},\n",
-       " {'name': 'Philly Steaks',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 25},\n",
-       " {'name': 'Stripes Biscuit',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 20}]"
+       "[<function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>,\n",
+       " <function __main__.review_counts(reviews)>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = list(map(lambda review:review,restaurants))\n",
+    "total_reviews = list(map(lambda review:review_counts,restaurants))\n",
     "total_reviews # 3420"
    ]
   },
